Add naming directories based on dates of contained files

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,7 @@
  - preserve separators in file_date.py -> extract_date_from_string
  - add resurisive processing of folders
  - see if they do the same as rename_by_date.py and remove date_to_front.py and add_modification_date_prefix.py
+ - handle paths containing single quotation <'>
+ - for rename_dirs_by_date 
+ - support "." as date separator
+ - fix regular expressions for detecting dates so it would require some differnt character or beginning/end of string before and after date
