--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+ - rename_dirs_by_date fails if date format from name is not in Y-M-D
  - preserve separators in file_date.py -> extract_date_from_string
  - add resurisive processing of folders
  - see if they do the same as rename_by_date.py and remove date_to_front.py and add_modification_date_prefix.py
